# nexusreach

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_table.py
backend/app/: main.py
backend/app/api/v1/: auth.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  logging.py  redis.py
backend/app/models/: __init__.py  base.py  user.py
backend/app/schemas/: user.py
backend/tests/: conftest.py  test_auth.py  test_health.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/lib/: api.ts  auth-api.ts
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  RegisterPage.tsx  UnauthorizedPage.tsx
frontend/src/stores/: auth-store.ts
frontend/src/types/: auth.ts
product_docs/: PRD.md
tech_docs/: Technical_Architecture.md
