[project]
name = "nexusreach-backend"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
strict_markers = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
]
ignore = [
    "ANN401", # dynamically typed expressions (Any) - we'll catch real Any usage
    "S101",   # use of assert (needed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101", "S105", "S107"]
